export const snapshot = {};

snapshot[`model 1`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "unsorted_media_instance_id",
                source: Expr {
                  raw: {
                    collection: "character",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "mediaId",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: false,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "unsorted_media_instance_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "unsorted_media_instance_id",
                source: Expr {
                  raw: {
                    collection: "character",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "mediaId",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: false,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "unsorted_media_instance_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 2`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_index: Expr {
            raw: {
              object: {
                name: "characters_instance_id",
                source: Expr {
                  raw: {
                    collection: "character",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              index: "characters_instance_id",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                name: "characters_instance_id",
                source: Expr {
                  raw: {
                    collection: "character",
                  },
                },
                terms: Expr {
                  raw: [
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                    Expr {
                      raw: {
                        object: {
                          field: Expr {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: Expr {
            raw: {
              index: "characters_instance_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 3`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_function: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    collection: Expr {
                                      raw: {
                                        collection: Expr {
                                          raw: {
                                            var: "matches",
                                          },
                                        },
                                        map: Expr {
                                          raw: {
                                            expr: Expr {
                                              raw: {
                                                collection: Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        after: undefined,
                                                        before: undefined,
                                                        paginate: Expr {
                                                          raw: {
                                                            var: "match",
                                                          },
                                                        },
                                                        size: 1000,
                                                      },
                                                    },
                                                    select: Expr {
                                                      raw: [
                                                        "data",
                                                      ],
                                                    },
                                                  },
                                                },
                                                map: Expr {
                                                  raw: {
                                                    expr: Expr {
                                                      raw: {
                                                        get: Expr {
                                                          raw: {
                                                            var: "refOrMatch",
                                                          },
                                                        },
                                                      },
                                                    },
                                                    lambda: "refOrMatch",
                                                  },
                                                },
                                              },
                                            },
                                            lambda: "match",
                                          },
                                        },
                                      },
                                    },
                                    initial: Expr {
                                      raw: [],
                                    },
                                    reduce: Expr {
                                      raw: {
                                        expr: Expr {
                                          raw: {
                                            collection: Expr {
                                              raw: {
                                                var: "b",
                                              },
                                            },
                                            prepend: Expr {
                                              raw: {
                                                var: "a",
                                              },
                                            },
                                          },
                                        },
                                        lambda: Expr {
                                          raw: [
                                            "a",
                                            "b",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    matches: Expr {
                                      raw: {
                                        collection: Expr {
                                          raw: {
                                            var: "mediaIds",
                                          },
                                        },
                                        map: Expr {
                                          raw: {
                                            expr: Expr {
                                              raw: {
                                                match: Expr {
                                                  raw: {
                                                    index: "unsorted_media_instance_id",
                                                  },
                                                },
                                                terms: Expr {
                                                  raw: [
                                                    Expr {
                                                      raw: {
                                                        var: "mediaId",
                                                      },
                                                    },
                                                    Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                            lambda: "mediaId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "mediaIds",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_media",
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              function: "find_media",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    collection: Expr {
                                      raw: {
                                        collection: Expr {
                                          raw: {
                                            var: "matches",
                                          },
                                        },
                                        map: Expr {
                                          raw: {
                                            expr: Expr {
                                              raw: {
                                                collection: Expr {
                                                  raw: {
                                                    from: Expr {
                                                      raw: {
                                                        after: undefined,
                                                        before: undefined,
                                                        paginate: Expr {
                                                          raw: {
                                                            var: "match",
                                                          },
                                                        },
                                                        size: 1000,
                                                      },
                                                    },
                                                    select: Expr {
                                                      raw: [
                                                        "data",
                                                      ],
                                                    },
                                                  },
                                                },
                                                map: Expr {
                                                  raw: {
                                                    expr: Expr {
                                                      raw: {
                                                        get: Expr {
                                                          raw: {
                                                            var: "refOrMatch",
                                                          },
                                                        },
                                                      },
                                                    },
                                                    lambda: "refOrMatch",
                                                  },
                                                },
                                              },
                                            },
                                            lambda: "match",
                                          },
                                        },
                                      },
                                    },
                                    initial: Expr {
                                      raw: [],
                                    },
                                    reduce: Expr {
                                      raw: {
                                        expr: Expr {
                                          raw: {
                                            collection: Expr {
                                              raw: {
                                                var: "b",
                                              },
                                            },
                                            prepend: Expr {
                                              raw: {
                                                var: "a",
                                              },
                                            },
                                          },
                                        },
                                        lambda: Expr {
                                          raw: [
                                            "a",
                                            "b",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    matches: Expr {
                                      raw: {
                                        collection: Expr {
                                          raw: {
                                            var: "mediaIds",
                                          },
                                        },
                                        map: Expr {
                                          raw: {
                                            expr: Expr {
                                              raw: {
                                                match: Expr {
                                                  raw: {
                                                    index: "unsorted_media_instance_id",
                                                  },
                                                },
                                                terms: Expr {
                                                  raw: [
                                                    Expr {
                                                      raw: {
                                                        var: "mediaId",
                                                      },
                                                    },
                                                    Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                            lambda: "mediaId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "mediaIds",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_media",
              },
            },
          },
          update: Expr {
            raw: {
              function: "find_media",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 4`] = `
[
  Expr {
    raw: {
      else: Expr {
        raw: {
          create_function: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    else: null,
                                    if: Expr {
                                      raw: {
                                        is_nonempty: Expr {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                    then: Expr {
                                      raw: {
                                        get: Expr {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: Expr {
                                      raw: {
                                        match: Expr {
                                          raw: {
                                            index: "characters_instance_id",
                                          },
                                        },
                                        terms: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                var: "characterId",
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                                select: "ref",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "characterId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_character",
              },
            },
          },
        },
      },
      if: Expr {
        raw: {
          exists: Expr {
            raw: {
              function: "find_character",
            },
          },
        },
      },
      then: Expr {
        raw: {
          params: Expr {
            raw: {
              object: {
                body: Expr {
                  raw: {
                    query: Expr {
                      raw: {
                        expr: Expr {
                          raw: {
                            in: Expr {
                              raw: {
                                in: Expr {
                                  raw: {
                                    else: null,
                                    if: Expr {
                                      raw: {
                                        is_nonempty: Expr {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                    then: Expr {
                                      raw: {
                                        get: Expr {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: Expr {
                                      raw: {
                                        match: Expr {
                                          raw: {
                                            index: "characters_instance_id",
                                          },
                                        },
                                        terms: Expr {
                                          raw: [
                                            Expr {
                                              raw: {
                                                var: "characterId",
                                              },
                                            },
                                            Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                                select: "ref",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            create: Expr {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: Expr {
                                              raw: {
                                                object: {
                                                  data: Expr {
                                                    raw: {
                                                      object: {
                                                        id: Expr {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: Expr {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            match: Expr {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: Expr {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: Expr {
                                  raw: {
                                    in: Expr {
                                      raw: {
                                        else: Expr {
                                          raw: {
                                            in: Expr {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: Expr {
                                                  raw: {
                                                    create: Expr {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                guild: Expr {
                                                                  raw: {
                                                                    from: Expr {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: Expr {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: Expr {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: Expr {
                                                  raw: {
                                                    params: Expr {
                                                      raw: {
                                                        object: {
                                                          data: Expr {
                                                            raw: {
                                                              object: {
                                                                instances: Expr {
                                                                  raw: [
                                                                    Expr {
                                                                      raw: {
                                                                        from: Expr {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: Expr {
                                                      raw: {
                                                        from: Expr {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: Expr {
                                          raw: {
                                            is_nonempty: Expr {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: Expr {
                                          raw: {
                                            get: Expr {
                                              raw: {
                                                from: Expr {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: Expr {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: Expr {
                                          raw: {
                                            from: Expr {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: Expr {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: Expr {
                          raw: [
                            "characterId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_character",
              },
            },
          },
          update: Expr {
            raw: {
              function: "find_character",
            },
          },
        },
      },
    },
  },
]
`;
